# BaseTypesLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
src/: ArrayIterator.h  Bounds.h  CMakeLists.txt  Coordinates.h  Graph.h  ModuleTester.cpp  ModuleTester.h  RegexString.cpp  RegexString.h  Vecxd.h
tests/: CMakeLists.txt  test-BaseTypesLib.cpp  test_basetypeslib.cpp
