file(GLOB files *.cpp *.h)

add_library(BaseTypesLib STATIC ${files})
target_include_directories(BaseTypesLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

install(
  TARGETS BaseTypesLib
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
