set(EXECUTABLES_TO_BE_INSTALLED test-BaseTypesLib)

# test-BaseTypesLib
add_executable(test-BaseTypesLib test-BaseTypesLib.cpp)
target_link_libraries(test-BaseTypesLib basetypeslib)
add_test(NAME basetypeslib COMMAND test-BaseTypesLib)

install(
  TARGETS ${EXECUTABLES_TO_BE_INSTALLED}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
